--- a/VideoGameList/appsettings.json
+++ b/VideoGameList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieContext": "Server=(localdb)\\mssqllocaldb;Database=Project2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
