--- a/VideoGameList/appsettings.json
+++ b/VideoGameList/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieContext": "Server=(localdb)\\mssqllocaldb;Database=Project2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "videoGameContext": "Server=(localdb)\\mssqllocaldb;Database=Project2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
